[metadata]
name = pylapy
version = attr: pylapy.__version__
author = Raphael Reme
author_email = raphaelreme-dev@protonmail.com
description = Pythonic wrapper around Linear Assignement Problem solvers
keywords = lap, linear programming, optimization, association problem
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raphaelreme/pylapy
project_urls =

classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.7
install_requires =


include_package_data = False

[options.package_data]
* = py.typed

[options.packages.find]
exclude=
    tests*


[options.extras_require]
lap = lap
lapjv = lapjv
lapsolver = lapsolver
scipy = scipy
